     (bug #11150)
   * Fixed UI sounds toggle crash on Windows
   * when a new unit is spawned when the attacker dies and the new unit has
     a lower number of weapons then the weapon number used in the attack an 
     wml_exception was thrown (bug #10926).
   * truncate names in the load dialog utf8 aware, might be related to 
     bug #11186

Version 1.3.19:
 * map editor:
   * activate border transitions in the editor using more translucent images
     than used ingame
 * language and i18n:
   * updated translations: Chinese, Czech, Danish, Filipino, French, Hungarian,
     Italian, Lithuanian, Polish, Turkish
 * miscellaneous and bug fixes:
   * Fixed chat log viewing crash after undo
   * Fixed era events loading
   * Idle, standing and selection animations are not accelerated anymore
   * All animations are disabled when the LOW_MEM compile switch is activated
   * correct FIREBALL_MISSILE not being synchronized properly. All UMC users
     need to check units using that macro
   * correct most missiles not being properly (bug #11134)
   * fix some female units using male frames during missile attacks
 * replays:
   * fixed "play side turn" not working (bug #11118)
   * at least partly fix "replays always corrupt" (bug #10976)

Version 1.3.18:
 * campaigns:
   * Northern Rebirth:
     * fix Sister Theta not appearing after freeing her (bug #11083)
 * language and i18n:
   * updated translations: German, Italian
 * campaign server:
   * Strip CRs from uploaded data
 * miscellaneous and bug fixes:
   * Made unit checksum only test for important variables

Version 1.3.17:
 * campaign server:
   * added more logging
   * remembers the last maintainer upload IP
 * campaigns:
   * Liberty
     * Made the guards in Hide and Seek behave more intelligently.
   * The South Guard
     * Completely redesigned the internal workings of 6b The Long March.
 * graphics:
   * more elvish portraits
 * language and i18n: