@@ -44,6 +44,7 @@ Version 1.3.19+svn:
      wml_exception was thrown (bug #10926).
    * truncate names in the load dialog utf8 aware, might be related to 
      bug #11186
+   * fix bug #11187 play_once=yes and fix musical cross-fading
 
 Version 1.3.19:
  * map editor:
